--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.Light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+   
+}
+.red{
+    background: red;
+}
+.yellow{
+    background: yellow;
+}
+.green{
+    background: green;
+}
+.off{
+    background: black;
+}
